--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev -p 3002 -H 0.0.0.0",
     "build": "next build",
     "start": "next start -p $PORT",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm install --no-save autoprefixer@10.4.21 postcss@8.4.31 tailwindcss@3.3.3"
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
+    "autoprefixer": "^10.4.21",
     "cloudinary": "^2.6.0",
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
@@ -34,10 +36,12 @@
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.2.24",
     "postcss-nested": "^7.0.2",
     "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
