--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
-    "postinstall": "npm install --no-save autoprefixer@10.4.21 postcss@8.4.31 tailwindcss@3.3.3"
+    "postinstall": "npm install --no-save autoprefixer@10.4.21 postcss@8.4.31 tailwindcss@3.3.3 postcss-nested@7.0.2"
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
@@ -23,6 +23,7 @@
     "next": "^14.2.24",
     "next-connect": "^1.0.0",
     "postcss": "^8.4.31",
+    "postcss-nested": "^7.0.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,7 +39,6 @@
     "@types/react-dom": "^18.2.8",
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.2.24",
-    "postcss-nested": "^7.0.2",
     "typescript": "^5.2.2"
   },
   "engines": {
