--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev -p 3002 -H 0.0.0.0",
     "build": "next build",
     "start": "next start -p $PORT",
-    "lint": "next lint",
-    "postinstall": "npm install --no-save autoprefixer@10.4.21 postcss@8.4.31 tailwindcss@3.3.3 postcss-nested@7.0.2"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
