--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: blizz-share
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: chmod +x ./build.sh && ./build.sh
     startCommand: npm start
     envVars:
       - key: NODE_ENV
