Fix: Update build configuration with direct TypeScript installation

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,7 @@
 legacy-peer-deps=true
+save-exact=true
 strict-peer-dependencies=false
-auto-install-peers=true
+engine-strict=false
+package-lock=false
+fund=false
+audit=false
