--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
-    "postinstall": "npm install --save-dev typescript@5.2.2 @types/react@18.2.24 @types/node@20.8.2 @types/react-dom@18.2.8"
+    "postinstall": "npm install --save typescript@5.2.2 @types/react@18.2.24 @types/node@20.8.2 @types/react-dom@18.2.8"
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
     "autoprefixer": "^10.4.21",
     "cloudinary": "^2.6.0",
     "crypto-js": "^4.1.1",
@@ -31,15 +34,12 @@
     "react-icons": "^4.11.0",
     "react-qr-code": "^2.0.15",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.8.2",
-    "@types/react": "^18.2.24",
-    "@types/react-dom": "^18.2.8",
     "eslint": "^8.50.0",
-    "eslint-config-next": "^14.2.24",
-    "typescript": "^5.2.2"
+    "eslint-config-next": "^14.2.24"
   },
   "engines": {
     "node": ">=18.0.0"
